# python-crowd

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.md  README.rst  __init__.py  build_dist.py  crowd.py  crowdserverstub.py  genindex.html  index.html  objects.inv  py-modindex.html  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  test-requirements.txt  tox.ini  unittests.py
.github/: dependabot.yml
crowd/: crowd.py
doc/: Makefile  conf.py  crowd.html  generate.py  index.rst
examples/: simple_auth_test.py  simple_token_auth.py
tests/: crowdserverstub.py  unittests.py
