[metadata]
name = crowd
author = Alexander Else
author-email = aelse@else.id.au
maintainer = Sorin Sbarnea
maintainer-email = sorin.sbarnea@gmail.com
summary = A python client to the Atlassian Crowd REST API
description-file =
    README.rst
# Do not include ChangeLog in description-file due to multiple reasons:
# - Unicode chars, see https://github.com/pycontribs/jira/issues/512
# - Breaks ability to perform `python setup.py install`

home-page = https://github.com/pycontribs/crowd
license = BSD
classifier =
    Development Status :: 4 - Beta
    Environment :: Other Environment
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Internet :: WWW/HTTP
keywords =
    api
    atlassian
    crowd
    rest
    web

[files]
packages =
    crowd

[egg_info]
egg_base = .

[aliases]
test=pytest

[bdist_wheel]
universal = 1

[build_sphinx]
source-dir = doc
build-dir  = doc/build
all_files  = 1

[upload_sphinx]
upload-dir = doc/build/html

[pbr]
warnerrors = true
